--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "urbanairship-cordova": "^7.3.4",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -51,7 +52,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "urbanairship-cordova": {}
     },
     "platforms": [
       "android"
