--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "2.2.0",
-    "cordova-android": "6.4.0",
+    "com-badrit-base64": "^0.2.0",
+    "cordova-android": "7.1.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.5",
@@ -53,7 +54,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "urbanairship-cordova": {}
+      "urbanairship-cordova": {},
+      "com-badrit-base64": {}
     },
     "platforms": [
       "android"
